--- a/examples/rust/hello/Cargo.toml
+++ b/examples/rust/hello/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["staticlib"]
 
 [profile.dev]
 panic = "abort"
+opt-level = 'z'
 
 [profile.release]
 panic = "abort"
@@ -19,4 +20,4 @@ opt-level = 'z'
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-tokio = { version = "1", features = ["rt"] }
+tokio = { version = "1", features = ["time", "macros", "rt"] }
