always compile hello_rust_cargo

--- a/examples/rust/hello/Makefile
+++ b/examples/rust/hello/Makefile
@@ -27,7 +27,7 @@ PRIORITY  = $(CONFIG_EXAMPLES_HELLO_RUST_CARGO_PRIORITY)
 STACKSIZE = $(CONFIG_EXAMPLES_HELLO_RUST_CARGO_STACKSIZE)
 MODULE    = $(CONFIG_EXAMPLES_HELLO_RUST_CARGO)
 
-context::
+all::
 	$(call RUST_CARGO_BUILD,hello,$(APPDIR)/examples/rust)
 
 clean::
