--- a/examples/rust/hello/Cargo.toml
+++ b/examples/rust/hello/Cargo.toml
@@ -17,7 +17,8 @@ codegen-units = 1
 opt-level = 'z'
 
 [dependencies]
+async-executor = { version = "1.13.2", features = ["static"] }
+futures = { version = "0.3.31", features = ["async-await"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
 tokio = { version = "1", features = ["time", "macros", "rt"] }
