--- a/examples/rust/hello/Cargo.toml
+++ b/examples/rust/hello/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["staticlib"]
 
 [profile.dev]
 panic = "abort"
-opt-level = 'z'
+opt-level = 0
 
 [profile.release]
 panic = "abort"
@@ -19,7 +19,9 @@ opt-level = 'z'
 [dependencies]
 async-executor = { version = "1.13.2", features = ["static"] }
 futures = { version = "0.3.31", features = ["async-await"] }
-reactive-cache = { version = "0.2.3", features = ["macros"] }
+itertools = "0.14.0"
+itertools-num = "0.1.3"
+reactive-cache = { version = "0.2.4", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["time", "macros", "rt"] }
