--- a/examples/rust/hello/Cargo.toml
+++ b/examples/rust/hello/Cargo.toml
@@ -25,3 +25,6 @@ reactive-cache = { version = "0.2.4", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["time", "macros", "rt"] }
+
+[dev-dependencies]
+futures-timer = "3.0.3"
