--- a/examples/rust/hello/Cargo.toml
+++ b/examples/rust/hello/Cargo.toml
@@ -24,6 +24,7 @@ itertools-num = "0.1.3"
 reactive-cache = { version = "0.3.3", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+stack-cstr = "0.1.0"
 tokio = { version = "1", features = ["time", "macros", "rt"] }
 
 [dev-dependencies]
