--- a/examples/rust/hello/Cargo.toml
+++ b/examples/rust/hello/Cargo.toml
@@ -17,6 +17,7 @@ codegen-units = 1
 opt-level = 'z'
 
 [dependencies]
+async-cancellation-token = "0.1.2"
 async-executor = { version = "1.13.2", features = ["static"] }
 futures = { version = "0.3.31", features = ["async-await"] }
 itertools = "0.14.0"
@@ -24,7 +25,8 @@ itertools-num = "0.1.3"
 reactive-cache = { version = "0.4.0-alpha.0", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-stack-cstr = "0.1.2"
+stack-cstr = "0.1.3"
+thiserror = "2.0.16"
 tokio = { version = "1", features = ["time", "macros", "rt"] }
 
 [dev-dependencies]
