--- a/examples/rust/hello/src/demos/game2048/Cargo.toml
+++ b/examples/rust/hello/src/demos/game2048/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rand = "0.9.2"
-getrandom = "0.3.4"
+rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
 ultraviolet = "0.10.0"
+thiserror = "2.0.17"
 
 [build-dependencies]
 crossterm = "0.26"
