--- a/examples/rust/hello/src/demos/game2048/Cargo.toml
+++ b/examples/rust/hello/src/demos/game2048/Cargo.toml
@@ -8,5 +8,12 @@ rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
 ultraviolet = "0.10.0"
 thiserror = "2.0.17"
 
-[build-dependencies]
-crossterm = "0.26"
+crossterm = { version = "0.26", optional = true }
+
+[features]
+cli = ["crossterm"]
+
+[[bin]]
+name = "main"
+path = "src/main.rs"
+required-features = ["cli"]
