Introduces build-time checks to include Rust async executor and related logic only when Rust integration is enabled.

--- a/examples/lvgldemo/Makefile
+++ b/examples/lvgldemo/Makefile
@@ -29,6 +29,10 @@ MODULE = $(CONFIG_EXAMPLES_LVGLDEMO)
 
 # LVGL demo Example
 
+ifeq ($(CONFIG_EXAMPLES_HELLO_RUST_CARGO),y)
 MAINSRC = lvgldemo.c $(wildcard binding/libuv/*.c)
+else
+MAINSRC = lvgldemo.c
+endif
 
 include $(APPDIR)/Application.mk
