--- a/examples/rust/hello/src/demos/wasm/Cargo.toml
+++ b/examples/rust/hello/src/demos/wasm/Cargo.toml
@@ -6,4 +6,14 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
+opt-level = "z"
+codegen-units = 1
+lto = true
+strip = true
+
 [dependencies]
